--- a/locales/pt-BR/messages.po
+++ b/locales/pt-BR/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.1.0-sprint05\n"
-"PO-Revision-Date: 2015-09-21T14:39:24\n"
+"Project-Id-Version: TAO 2023.05\n"
+"PO-Revision-Date: 2023-04-18T13:40:54\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: pt-BR\n"
@@ -13,12 +13,39 @@ msgstr ""
 "X-Poedit-KeywordsList: __\n"
 "X-Poedit-SearchPath-0: .\n"
 
+msgid "Edit Processing Rule"
+msgstr ""
+
+msgid "Edit Processing Rules"
+msgstr ""
+
 msgid "Hello World"
+msgstr ""
+
+msgid "invalid qti xml"
+msgstr ""
+
+msgid "Invalid QTI xml %s"
+msgstr ""
+
+msgid "Invalid Response Processing"
+msgstr ""
+
+msgid "Missing root node <responseProcessing>"
 msgstr ""
 
 #, tao-public
 msgid "Template"
 msgstr "Modelo"
+
+msgid "The variable %s does not exist."
+msgstr ""
+
+msgid "variable missing"
+msgstr ""
+
+msgid "wrong xml"
+msgstr ""
 
 #, tao-public
 msgid "xmlEdit"
